jqgant.css
.cellcontainer {
	overflow-x: scroll;
	overflow-y: hidden;
	white-space: nowrap;
	width: 700px;
	float: left;
	position: relative;
}

#chartdiv {
	min-width:3000px; 
	width: auto !important;
       	width: 3000px;
	overflow: hidden;
}

.jqgant_cell {
	width: 20px;
	height: 20px;
	border-width: 1px;
	border-style: solid; 
	border-color: #ddd;
	display: inline-block;
	position: relative;		
}

.jqgant_week_label {
	height: 20px;
	width: 108px;
	border-width: 1px;
	border-style: solid;
	border-color: #ddd;
	display: inline-block;
}

#jqgant_task_table {
	float: left;
	margin-top: 20px;

	border-top: 1px solid #ddd;
	border-spacing: 0;

}

#jqgant_task_table td,
#jqgant_task_table th {

	border: 1px solid #ddd;
	padding-left: 2px;
	padding-right: 5px;
	padding-top:0px;
	padding-bottom:0px;
	height: 22px;
	overflow:hidden;
	white-space: nowrap;
}

#jqgant_task_table div {
	height: 21px;
	overflow: auto;
}

#jqgant_task_table select {
	height: 18px;
}


.taskbar {
	height: 18px;
	min-height: 18px;
	max-height: 18px;
	position: relative;
	z-index: 5;
}

.jqgantdiv {

	Font-family: Calibri, sans-serif;
	font-size: normal;

}

